@@ -4,6 +4,7 @@ Fixed a bug: telescope control sends RA=0 for objects with RA between
 (12 and 24?) on Intel Macs. (revision 6025, fix proposed by David Hulse)
 Changed tabs style to a more compact, more rounded look. (revision 6032)
 Added two entries for Sky-Watcher in the device models list. (revision 6034)
+Cleaned up log messages and telescope server loading logic.
 
 [0.1.9] (2010-01-26) (revision 5769)
 Branched telescope server code to simplify building. (revision 5671)
